<resources>
    <string name="app_name">Fitness App</string>
    <string name="chest_workout">Chest Workout</string>
    <string name="begin">Begin</string>
    <string name="back_workout">Back Workout</string>
    <string name="biceps_workout">Biceps Workout</string>
    <string name="triceps_workout">Triceps Workout</string>
    <string name="abs_workout">Abs Workout</string>
    <string name="push_ups">Push Ups</string>
    <string name="workout_plan_3_days">Workout plan - 3 days</string>
    <string name="yoga">Yoga</string>
    <string name="nutrition">Nutrition</string>
    <string name="day_one">Day One</string>
    <string name="chest_triceps"><![CDATA[Chest & Triceps]]></string>
    <string name="back_biceps"><![CDATA[Back & Biceps]]></string>
    <string name="day_two">Day Two</string>
    <string name="legs_shoulders"><![CDATA[Legs & Shoulders]]></string>
    <string name="day_three">Day Three</string>
    <string name="push_ups2">PUSH UPS</string>
    <string name="_2_minutes_per_set_3_sets">2 minutes per set - 3 sets</string>
    <string name="description">description</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="enter_workout_time_in_seconds">Enter workout time in seconds</string>
    <string name="start">Start</string>
    <string name="set_a_reminder_for_your_next_workout_session">Set a reminder for your next workout session.</string>
    <string name="set_notification_time">Set Notification Time</string>
    <string name="contact_us">Contact us</string>
    <string name="email_address">Email Address</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="fitness_app">Fitness App</string>
</resources>